# fonos

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  test_async2
fonos-core/: Cargo.toml  README.md
fonos-core/src/: audio.rs  config.rs  doctor.rs  echo.rs  engine_setup.rs  error.rs  error_class.rs  funnel.rs  hotkey.rs  lib.rs  listen.rs  llm.rs  model_caps.rs  modes.rs  pipeline.rs  scenarios.rs  services.rs  stats.rs  storage.rs  sts.rs  stt.rs  tts.rs  vad.rs  vocab.rs  voice_store.rs
fonos-core/src/agent/: context.rs  custom_loader.rs  fast_path.rs  mod.rs  processor.rs  registry.rs  router.rs  safety.rs  skill.rs
fonos-core/src/meetings/: audio.rs  chunker.rs  export.rs  mod.rs  openrouter.rs  session.rs  summary.rs
fonos-core/src/workflow/: builtin.rs  dialog.rs  engine.rs  llm_step.rs  migrate.rs  mod.rs  model.rs  registry.rs
fonos-core/tests/: note_mode_tests.rs  rust-meeting-tests.rs  storage_tests.rs
fonos-desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.linux.conf.json
fonos-desktop/src-tauri/capabilities/: default.json  main-updater.json
fonos-desktop/src-tauri/resources/: fonos-audio-capture  fonos-stt-apple  fonos-voice-capture  fonos.icns  icon.icns
fonos-desktop/src-tauri/src/: adapters.rs  error_surface.rs  hotkey.rs  injection.rs  lib.rs  main.rs  tray.rs  trigger_label.rs  window.rs
fonos-desktop/src-tauri/src/audio/: diarize.rs  linux_aec.rs  mod.rs  playback.rs  ref_envelope.rs  system_capture.rs  (+1 more)
fonos-desktop/src-tauri/swift/: apple_stt.swift  build.sh  system_audio_capture.swift  voice_capture.swift
fonos-desktop/src-tauri/tests/: compat_tests.rs  config_parity.rs  instant_source_acceptance.rs  test_audio.rs  test_build.rs  test_hotkey.rs  test_injection.rs  test_performance.rs  uppercase_acceptance.rs
(+344 files in other folders)
