[package]
name = "fonos-core"
version = "0.1.0"
edition = "2021"
description = "Platform-independent business logic for Fonos voice assistant"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "2"
async-trait = "0.1"
regex = "1"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
