[package]
name = "fonos-desktop"
version = "0.3.2"
edition = "2021"

[features]
# Enable this feature in CI to skip hardware-dependent tests (mic, accessibility).
# Usage: cargo test --features ci
ci = []

[dependencies]
fonos-core = { path = "../../fonos-core" }
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
cpal = "0.15"
rodio = "0.19"
libc = "0.2"
arboard = "3.6.1"
rfd = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"
async-trait = "0.1"
tauri-plugin-global-shortcut = "2"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"

[dev-dependencies]
# Used by test_build.rs for Cargo.toml validation.
toml = "0.8"
# Blocking HTTP client for server health-check polling in tests.
reqwest = { version = "0.12", features = ["json", "blocking"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
